# digitalLogicSuite

./: .gitignore  CMakeLists.txt  Makefile  digital-logic-suite  main  main.cpp  readme.md
src/: MainWindow.cpp  MainWindow.h  truthTable_with_expression_simplifier.cpp  truthTable_with_expression_simplifier.h
